k8s/acct-core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acct-core
  namespace: openrdx
  labels:
    app: acct-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: acct-core
  template:
    metadata:
      labels:
        app: acct-core
    spec:
      containers:
      - name: acct-core
        image: openrdx/core:latest
        ports:
        - containerPort: 1813
---
apiVersion: v1
kind: Service
metadata:
  name: acct-core
  namespace: openrdx
spec:
  selector:
    app: acct-core
  ports:
    - protocol: UDP
      port: 1813
      targetPort: 1813
  type: ClusterIP
