k8s/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
      - name: core
        image: openrdx/core:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
