k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oss-frontend
  namespace: openrdx
  labels:
    app: oss-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oss-frontend
  template:
    metadata:
      labels:
        app: oss-frontend
    spec:
      containers:
      - name: oss-frontend
        image: openrdx/oss-frontend:latest
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: oss-frontend
  namespace: openrdx
spec:
  selector:
    app: oss-frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: ClusterIP
